--- a/src/app/components/link/link.component.html
+++ b/src/app/components/link/link.component.html
@@ -1,10 +1,12 @@
 <div class="link" #host>
-    <svg>
-        <path d="
+  <svg>
+    <path
+      d="
       M 0,0
       h 100
       v 100
       h 100
-      "></path>
-    </svg>
+      "
+    ></path>
+  </svg>
 </div>
