--- a/src/app/components/plugin-library/plugin-library.component.html
+++ b/src/app/components/plugin-library/plugin-library.component.html
@@ -1,17 +1,15 @@
 <div class="tree">
-    <ng-container *ngTemplateOutlet="tree;context:{nodes:allNodes}">
-    </ng-container>
+  <ng-container *ngTemplateOutlet="tree; context: { nodes: allNodes }"> </ng-container>
 </div>
 
 <ng-template #tree let-nodes="nodes">
-    <div *ngFor="let node of nodes">
-        <div class="plugin" [attr.draggable]="!!node.type" [attr.data-type]="node.type" (dragstart)="start($event)">
-            <i [ngClass]="node.icon"></i> {{node.name}}
-        </div>
-
-        <div class="children">
-            <ng-container *ngTemplateOutlet="tree;context:{nodes:node.children}">
-            </ng-container>
-        </div>
+  <div *ngFor="let node of nodes">
+    <div class="plugin" [attr.draggable]="!!node.type" [attr.data-type]="node.type" (dragstart)="start($event)">
+      <i [ngClass]="node.icon"></i> {{ node.name }}
     </div>
+
+    <div class="children">
+      <ng-container *ngTemplateOutlet="tree; context: { nodes: node.children }"> </ng-container>
+    </div>
+  </div>
 </ng-template>
