--- a/src/app/components/node/node.component.html
+++ b/src/app/components/node/node.component.html
@@ -10,7 +10,7 @@
   <div class="inlet" [hidden]="!hasInlet"></div>
   <div class="outlet" [hidden]="!hasOutlet"></div>
   <div class="node-header">
-    <button class="expander" (click)="expand()">
+    <button class="expander">
       <i class="icon-lsi-down-arrow" [hidden]="expanded"></i>
       <i class="icon-lsi-right-arrow" [hidden]="!expanded"></i>
     </button>
