--- a/src/app/components/plugin-library/plugin-library.component.html
+++ b/src/app/components/plugin-library/plugin-library.component.html
@@ -5,10 +5,10 @@
 <ng-template #tree let-nodes="nodes">
   <div *ngFor="let node of nodes">
     <div class="plugin" [attr.draggable]="!!node.type" [attr.data-type]="node.type" (dragstart)="start($event)">
-      <i [ngClass]="node.icon"></i> {{ node.name }}
+      <i (click)="node.expanded = !node.expanded" [ngClass]="node.expanded ? node.expandedIcon || node.icon : node.icon"></i> {{ node.name }}
     </div>
 
-    <div class="children">
+    <div class="children" *ngIf="node.expanded">
       <ng-container *ngTemplateOutlet="tree; context: { nodes: node.children }"> </ng-container>
     </div>
   </div>
