--- a/src/app/components/plugin-library/plugin-library.component.scss
+++ b/src/app/components/plugin-library/plugin-library.component.scss
@@ -1,10 +1,26 @@
 .tree {
   margin-left: 5px;
-
+  width: 250px;
+  
   .plugin {
-    cursor: grab;
-    padding-top: 10px;
+    padding: 5px 0;
     color: #c2c2c2;
+
+    &:hover {
+      color: #fff;
+      background-color: rgba(0, 0, 0, 0.4);
+    }
+
+    &.draggable {
+      cursor: grab;
+      .expand {
+        cursor: grab;
+      }
+    }
+
+    .expand {
+      cursor: pointer;
+    }
   }
 
   .children {
