added top controls bar

--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -73,7 +73,7 @@ header {
   height: $header-height;
   border-bottom: 1px solid $black-color;
   padding: 0;
-  background-image: url("/assets/logo.png");
+  background-image: url('/assets/logo.png');
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
