--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -11,13 +11,13 @@
   </header>
   <main>
     <article>
-      
+      <app-top-controls></app-top-controls>
       <app-workbench></app-workbench>
     </article>
-    <nav [ngClass]="{collapsed: collapsed}">
+    <nav [ngClass]="{ collapsed: collapsed }">
       <app-plugin-library></app-plugin-library>
     </nav>
-    <div class="collapser" (click)="toggle()" [ngClass]="{collapsed: collapsed}">
+    <div class="collapser" (click)="toggle()" [ngClass]="{ collapsed: collapsed }">
       <i class="icon-lsi-left-arrow" [hidden]="collapsed"></i>
       <i class="icon-lsi-right-arrow" [hidden]="!collapsed"></i>
     </div>
