--- a/src/app/components/top-controls/top-controls.component.html
+++ b/src/app/components/top-controls/top-controls.component.html
@@ -1,1 +1,8 @@
-<div class="top-controls"></div>
+<div class="top-controls">
+    <button>
+        <i class="icon-lsi-move-list"></i>
+    </button>
+    <button>
+        <i class="icon-lsi-trash"></i>
+    </button>
+</div>
