--- a/src/app/components/right-panel/right-panel.component.html
+++ b/src/app/components/right-panel/right-panel.component.html
@@ -2,7 +2,7 @@
   <h3>Selection Details</h3>
 </div>
 <div *ngFor="let node of state!.nodes">
-  <button class="accordion" [ngClass]="visibleNodesMap.get(node.id!) ? 'active' : 'accordion'" (click)="togglePanel(node)">
+  <button class="accordion" [ngClass]="visibleNodesMap.get(node.id!) || node.selected ? 'active' : 'accordion'" (click)="togglePanel(node)">
     {{ node.name }}
   </button>
   <div [hidden]="!visibleNodesMap.get(node.id!)">
