--- a/src/app/components/right-panel/right-panel.component.scss
+++ b/src/app/components/right-panel/right-panel.component.scss
@@ -1,47 +1,50 @@
-.panel-header {
-  background: #101010;
-  padding: 5px;
-}
+.right-panel {
+  width: 300px;
+  .panel-header {
+    background: #101010;
+    padding: 5px;
+  }
 
-.accordion {
-  background-color: #36454F;
-  color: #b5b5b5;
-  cursor: pointer;
-  padding: 12px;
-  width: 100%;
-  border: none;
-  text-align: left;
-  outline: none;
-  font-size: 15px;
-  transition: 0.4s;
-}
+  .accordion {
+    background-color: #36454f;
+    color: #b5b5b5;
+    cursor: pointer;
+    padding: 12px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+  }
 
-.active {
-  border: 2px solid #fec966;
-  background-color: #433115;
-}
+  .active {
+    border: 2px solid #fec966;
+    background-color: #433115;
+  }
 
-.accordion:hover {
-  background-color: #ccc;
-  color: #101010;
-}
+  .accordion:hover {
+    background-color: #ccc;
+    color: #101010;
+  }
 
-.accordion:after {
-  content: '\002B';
-  color: #777;
-  font-weight: bold;
-  float: right;
-  margin-left: 5px;
-}
+  .accordion:after {
+    content: "\002B";
+    color: #777;
+    font-weight: bold;
+    float: right;
+    margin-left: 5px;
+  }
 
-.active:after {
-  content: '\2212';
-}
+  .active:after {
+    content: "\2212";
+  }
 
-.panel {
-  padding: 0 18px;
-  background-color: white;
-  max-height: 0;
-  overflow: hidden;
-  transition: max-height 0.2s ease-out;
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+  }
 }
