delete using button

--- a/src/app/components/top-controls/top-controls.component.html
+++ b/src/app/components/top-controls/top-controls.component.html
@@ -1,8 +1,12 @@
 <div class="top-controls">
-    <button>
+    <button class="btn">
+       Add Node
+    </button>
+    <div class="separator"></div>
+    <button class="btn btn-noborder">
         <i class="icon-lsi-move-list"></i>
     </button>
-    <button>
+    <button class="btn btn-noborder" (click)="remove()">
         <i class="icon-lsi-trash"></i>
     </button>
 </div>
