--- a/src/app/components/top-controls/top-controls.component.scss
+++ b/src/app/components/top-controls/top-controls.component.scss
@@ -1,7 +1,26 @@
+@use "/src/sass/colors" as colors;
+
 $bg-color: #171616;
 
 .top-controls {
   display: flex;
   background-color: $bg-color;
   height: 50px;
+  align-items: center;
+  padding-left: 1rem;
+
+  .separator {
+    height: 80%;
+    margin-left: 1rem;
+    border-right: 1px solid 
+  }
+
+  .btn {
+    font-size: 1.125rem;
+    margin: 0 0.25rem;
+  }
+
+  i {
+    font-size: 1.25rem;
+  }
 }
