--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,39 @@
+@use "./sass/colors" as colors;
+
 * {
   box-sizing: border-box;
 }
 
 body {
   margin: 0;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
+}
+
+.btn {
+  background-color: transparent;
+  color: colors.$primary;
+  height: 2.5rem;
+  border: 1px solid;
+  cursor: pointer;
+  border-radius: 5px;
+
+  &:hover {
+    color: lighten($color: colors.$primary, $amount: 100);
+  }
+
+  &:focus {
+    outline: none;
+  }
+
+  &:active {
+    color: lighten($color: colors.$primary, $amount: 50);
+  }
+
+  &:disabled {
+    color: lighten($color: colors.$primary, $amount: 25);
+  }
+
+  &.btn-noborder {
+    border: none;
+  }
 }
