--- a/src/app/components/top-controls/top-controls.component.html
+++ b/src/app/components/top-controls/top-controls.component.html
@@ -3,7 +3,7 @@
        Add Node
     </button>
     <div class="separator"></div>
-    <button class="btn btn-noborder">
+    <button class="btn btn-noborder" (click)="copy()">
         <i class="icon-lsi-move-list"></i>
     </button>
     <button class="btn btn-noborder" (click)="remove()">
