--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,8 +12,8 @@ body {
 .btn {
   background-color: transparent;
   color: colors.$primary;
-  height: 2.5rem;
   border: 1px solid;
+  font-size: 1rem;
   cursor: pointer;
   border-radius: 5px;
 
