--- a/src/app/components/top-controls/top-controls.component.scss
+++ b/src/app/components/top-controls/top-controls.component.scss
@@ -12,15 +12,22 @@ $bg-color: #171616;
   .separator {
     height: 80%;
     margin-left: 1rem;
-    border-right: 1px solid 
+    margin-right: 1rem;
+    border-right: 1px solid;
   }
 
   .btn {
-    font-size: 1.125rem;
     margin: 0 0.25rem;
+    padding: 0.5rem 1rem;
+  }
+
+  .btn-noborder {
+    border: none;
+    padding: 0.5rem 0.25rem;
+
   }
 
   i {
-    font-size: 1.25rem;
+    font-size: 1.50rem;
   }
 }
