--- a/src/app/components/right-panel/right-panel.component.scss
+++ b/src/app/components/right-panel/right-panel.component.scss
@@ -6,12 +6,12 @@
   }
 
   .accordion {
-    background-color: #36454f;
+    background-color: #3e3e3e;
     color: #b5b5b5;
     cursor: pointer;
     padding: 12px;
     width: 100%;
-    border: none;
+    border: 2px solid black;
     text-align: left;
     outline: none;
     font-size: 15px;
@@ -29,15 +29,10 @@
   }
 
   .accordion:after {
-    content: "\002B";
     color: #777;
     font-weight: bold;
-    float: right;
-    margin-left: 5px;
-  }
-
-  .active:after {
-    content: "\2212";
+    float: left;
+    margin-right: 5px;
   }
 
   .panel {
