--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -1,9 +1,6 @@
+@use "/src/sass/colors" as colors;
+
 $header-height: 75px;
-$primary-bg-color: #3e3e3e;
-$primary-bg-color-lighter: #4b4b4b;
-$primary-bg-color-lighest: #555555;
-$black-color: #0a0d0c;
-$primary-text-color: #b5b5b5;
 $nav-width: 250px;
 
 .layout {
@@ -14,8 +11,8 @@ $nav-width: 250px;
 main {
   display: flex;
   height: calc(100vh - $header-height);
-  background-color: $black-color;
-  color: $primary-text-color;
+  background-color: colors.$black;
+  color: colors.$primary;
   position: static;
 }
 
@@ -27,8 +24,7 @@ main > article {
 
 main > nav,
 main > aside {
-  // flex: 0 0 100px
-  background: $primary-bg-color;
+  background: colors.$darkgray;
 }
 
 main > nav {
@@ -48,10 +44,10 @@ main > nav {
 }
 
 .collapser {
-  background: $primary-bg-color;
+  background: colors.$darkgray;
   order: -1;
   height: 100%;
-  border-left: 1px solid $black-color;
+  border-left: 1px solid colors.$black;
   width: 15px;
   display: flex;
   align-items: center;
@@ -63,17 +59,17 @@ main > nav {
 
   i {
     font-size: 0.5rem;
-    color: $primary-text-color;
+    color: colors.$primary;
     padding-right: 0.25rem;
   }
 }
 
 header {
-  background: $primary-bg-color;
+  background: colors.$darkgray;
   height: $header-height;
-  border-bottom: 1px solid $black-color;
+  border-bottom: 1px solid colors.$black;
   padding: 0;
-  background-image: url('/assets/logo.png');
+  background-image: url("/assets/logo.png");
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
@@ -85,19 +81,11 @@ header {
     button {
       background-color: transparent;
       border: none;
-      color: $primary-text-color;
+      color: colors.$primary;
       margin-left: 5px;
       cursor: pointer;
       font-size: 1rem;
       text-decoration: underline;
-
-      &:hover {
-        background-color: $primary-bg-color-lighter;
-      }
-
-      &:active {
-        background-color: $primary-bg-color-lighest;
-      }
     }
   }
 }
