--- a/src/app/components/right-panel/right-panel.component.html
+++ b/src/app/components/right-panel/right-panel.component.html
@@ -2,13 +2,19 @@
   <div class="panel-header">
     <h3>Selection Details</h3>
   </div>
-  <div *ngFor="let node of state!.nodes">
-    <button class="accordion" [ngClass]="visibleNodesMap.get(node.id!) || node.selected ? 'active' : 'accordion'"
-      (click)="togglePanel(node)">
+  <div *ngFor="let node of state!.nodes" class="accordion">
+    <button class="button" [ngClass]="{'selected': selected[node.id!]}" (click)="togglePanel(node)">
       {{ node.name }}
     </button>
-    <div [hidden]="!visibleNodesMap.get(node.id!)">
-      <p>plugin params</p>
+    <div [hidden]="!visibleNodesMap.get(node.id!)" class="node-settings">
+      <div>
+        <label for="setting">Setting:</label>
+        <input [(ngModel)]="node.settings" type="text" name="" id="setting">
+      </div>
+      <br />
     </div>
+  </div>
+  <div class="node-settings">
+    <button class="btn btn-green" (click)="save()">Save</button>
   </div>
 </div>
