--- a/src/sass/_colors.scss
+++ b/src/sass/_colors.scss
@@ -1,2 +1,7 @@
+$black: #0a0d0c;
+$darkgray: #3e3e3e;
+$gray: #c2c2c2;
+$lightgray: #e6e6e6;
 $primary: #b5b5b5;
 $secondary: #d8e2fa;
+$green: #02dcc7;
