--- a/src/styles.scss
+++ b/src/styles.scss
@@ -16,6 +16,7 @@ body {
   font-size: 1rem;
   cursor: pointer;
   border-radius: 5px;
+  padding: 0.5rem;
 
   &:hover {
     color: lighten($color: colors.$primary, $amount: 100);
@@ -32,8 +33,33 @@ body {
   &:disabled {
     color: lighten($color: colors.$primary, $amount: 25);
   }
+}
 
-  &.btn-noborder {
-    border: none;
+.btn-noborder {
+  border: none;
+}
+
+.btn-green {
+  background-color: colors.$green;
+  color: colors.$black;
+  border: none;
+
+  &:hover {
+    color: colors.$black;
+    background-color: lighten($color: colors.$green, $amount: 20);
+  }
+}
+
+input {
+  color: colors.$primary;
+  font-size: 1rem;
+  background-color: colors.$black;
+  width: 100%;
+  border: 1px solid colors.$gray;
+  border-radius: 5px;
+  padding: 0.5rem;
+
+  &:focus {
+    outline: none;
   }
 }
