--- a/src/app/components/top-controls/top-controls.component.html
+++ b/src/app/components/top-controls/top-controls.component.html
@@ -1,12 +1,10 @@
 <div class="top-controls">
-    <button class="btn">
-       Add Node
-    </button>
-    <div class="separator"></div>
-    <button class="btn btn-noborder" (click)="copy()">
-        <i class="icon-lsi-move-list"></i>
-    </button>
-    <button class="btn btn-noborder" (click)="remove()">
-        <i class="icon-lsi-trash"></i>
-    </button>
+  <button class="btn">Add Node</button>
+  <div class="separator"></div>
+  <button class="btn btn-noborder" (click)="copy()">
+    <i class="icon-lsi-move-list"></i>
+  </button>
+  <button class="btn btn-noborder" (click)="remove()">
+    <i class="icon-lsi-trash"></i>
+  </button>
 </div>
