--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -1,4 +1,4 @@
-@use "/src/sass/colors" as colors;
+@use '/src/sass/colors' as colors;
 
 $header-height: 75px;
 $nav-width: 250px;
@@ -69,7 +69,7 @@ header {
   height: $header-height;
   border-bottom: 1px solid colors.$black;
   padding: 0;
-  background-image: url("/assets/logo.png");
+  background-image: url('/assets/logo.png');
   background-repeat: no-repeat;
   background-size: cover;
   display: flex;
