--- a/src/app/components/right-panel/right-panel.component.scss
+++ b/src/app/components/right-panel/right-panel.component.scss
@@ -1,4 +1,4 @@
-@use "/src/sass/colors" as colors;
+@use '/src/sass/colors' as colors;
 
 .right-panel {
   width: 300px;
@@ -25,7 +25,7 @@
 
     &:hover {
       background-color: lighten($color: colors.$darkgray, $amount: 20);
-      color: lighten($color:  colors.$primary, $amount: 30)
+      color: lighten($color: colors.$primary, $amount: 30);
     }
   }
 
