--- a/src/app/components/plugin-library/plugin-library.component.html
+++ b/src/app/components/plugin-library/plugin-library.component.html
@@ -2,6 +2,12 @@
   <ng-container *ngTemplateOutlet="tree; context: { nodes: allNodes }"> </ng-container>
 </div>
 
+<button (click)="displayNewPluginModal()">
+  <i class="icon-lsi-add">
+    New plugin
+  </i>
+</button>
+
 <ng-template #tree let-nodes="nodes">
   <div *ngFor="let node of nodes">
     <div
