fixed plugin bootstrap modal

--- a/src/app/components/plugin-library/plugin-library.component.html
+++ b/src/app/components/plugin-library/plugin-library.component.html
@@ -2,7 +2,8 @@
   <ng-container *ngTemplateOutlet="tree; context: { nodes: allNodes }"> </ng-container>
 </div>
 
-<button (click)="displayNewPluginModal()">
+<br/>
+<button class="btn btn-green" (click)="displayNewPluginModal()">
   <i class="icon-lsi-add">
     New plugin
   </i>
