added home page and worflow list

--- a/src/app/components/layout/layout.component.html
+++ b/src/app/components/layout/layout.component.html
@@ -15,7 +15,8 @@
       <app-workbench></app-workbench>
     </article>
     <nav [ngClass]="{ collapsed: collapsed }">
-      <app-plugin-library></app-plugin-library>
+      <!-- <app-plugin-library></app-plugin-library> -->
+      <app-left-panel></app-left-panel>
     </nav>
     <div class="collapser" (click)="toggle()" [ngClass]="{ collapsed: collapsed }">
       <i class="icon-lsi-left-arrow" [hidden]="collapsed"></i>
