--- a/src/app/components/top-controls/top-controls.component.html
+++ b/src/app/components/top-controls/top-controls.component.html
@@ -7,4 +7,7 @@
   <button class="btn btn-noborder" (click)="remove()">
     <i class="icon-lsi-trash"></i>
   </button>
+  <button class="btn btn-green run" (click)="runWorkflow()">
+    <b class="icon-lsi-workflow">Run</b>
+  </button>
 </div>
