--- a/src/app/components/plugin-new/plugin-new.component.html
+++ b/src/app/components/plugin-new/plugin-new.component.html
@@ -1,8 +1,10 @@
 <div class="wf-modal">
   <div class="modal-header">
-        <h4 class="modal-title">New plugin</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modalReference.dismiss('Cross click')">
-        <span aria-hidden="true">&times;</span>
+        <h4 class="modal-title" style="color: white;">New plugin</h4>
+        <!-- <button type="button" class="close" aria-label="Close" (click)="modalReference.dismiss('Cross click')"> -->
+        <button type="button" class="btn-close" aria-label="Close" (click)="modalReference.dismiss('Cross click')">
+
+        <!-- <span aria-hidden="true">&times;</span> -->
         </button>
   </div>
   <div class="modal-body">
