--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,36 +1,22 @@
 
 <div class="layout">
-  <header>
-    <img src="/assets/logo.png" alt="" />
-    <div class="header-menu">
-    </div>
-  </header>
-  <main>
-    <article>
-      <!-- <app-top-controls></app-top-controls>
-      <app-workbench></app-workbench> -->
-      <br />
-      <h2 style="margin-left: 40px;">Workflows</h2>
-      <br/>
+    <header>
+        <img src="/assets/logo.png" alt=""/>
+        <div class="header-menu"></div>
+    </header>
+    <main>
+        <article>
+            <br/>
+            <h2 style="margin-left: 40px;">Workflows</h2>
+            <br/>
 
-      <div class="box">
-        <input id="typeahead-http" type="text" class="form-control" placeholder="Search through collections" />
-      <button class="btn btn-green last" (click)="displayNewWfModal()"><b>New Workflow</b></button>
-
-      </div>
-      <div class="separator"></div>
-      <div class="wf-area"></div>
-
-    </article>
-    <!-- <nav [ngClass]="{ collapsed: collapsed }">
-      <app-left-panel></app-left-panel>
-    </nav> -->
-    <!-- <div class="collapser" (click)="toggle()" [ngClass]="{ collapsed: collapsed }">
-      <i class="icon-lsi-left-arrow" [hidden]="collapsed"></i>
-      <i class="icon-lsi-right-arrow" [hidden]="!collapsed"></i>
-    </div> -->
-    <!-- <aside>
-      <app-right-panel></app-right-panel>
-    </aside> -->
-  </main>
+            <div class="box">
+                <input id="typeahead-http" type="text" class="form-control" placeholder="Search through collections"/>
+                <button class="btn btn-green last" (click)="displayNewWfModal()"><b>New Workflow</b></button>
+            </div>
+            <div class="separator"></div>
+            <!-- TODO: display workflows and filtering options-->
+            <div class="wf-area"></div>
+        </article>
+    </main>
 </div>
