--- a/src/app/components/plugin-new/plugin-new.component.html
+++ b/src/app/components/plugin-new/plugin-new.component.html
@@ -1,11 +1,7 @@
 <div class="wf-modal">
   <div class="modal-header">
-        <h4 class="modal-title" style="color: white;">New plugin</h4>
-        <!-- <button type="button" class="close" aria-label="Close" (click)="modalReference.dismiss('Cross click')"> -->
-        <button type="button" class="btn-close" aria-label="Close" (click)="modalReference.dismiss('Cross click')">
-
-        <!-- <span aria-hidden="true">&times;</span> -->
-        </button>
+    <h4 class="modal-title">New plugin</h4>
+    <button type="button" class="btn-close" aria-label="Close" (click)="modalReference.dismiss('Cross click')"></button>
   </div>
   <div class="modal-body">
     <ngb-alert *ngIf="displayAlert" [type]='alertType' (close)="displayAlert = false">{{alertMessage}}</ngb-alert>
