--- a/src/app/components/plugin-new/plugin-new.component.scss
+++ b/src/app/components/plugin-new/plugin-new.component.scss
@@ -1,48 +1,54 @@
+@use '/src/sass/colors' as colors;
+
 $primary-bg-color: #3e3e3e;
 $primary-bg-color-lighter: #4b4b4b;
 $primary-bg-color-lighest: #555555;
 
 #pluginLink {
-    border: none;
-    border-bottom: solid 2px #007bff;
-  }
+  border: none;
+  border-bottom: solid 2px #007bff;
+}
   
-  #pluginLink:invalid {
-    border: 1px dotted red;
-  }
-  
-  #getJsonBtn {
-    width: 15%;
-    margin-left: 2.5%;
-    margin-right: 2%;
-    font-size: 16px;
-  }
-  
-  #registerBtn {
-    background-color: #f8f9fa;
-    border-color: #bfbfbf;
-    color: black;
-  }
-  
-  #registerText {
-    margin-left: 10px;
-    display: inline;
-    font-family: 'Roboto', sans-serif;
-    font-weight: normal;
-  }
-  
-  .top5 {
-    margin-top: 5%;
-  }
-  
-  .width80 {
-    width: 80%;
-  }
-  
-  .right10 {
-    margin-right: 10px;
-  }
+#pluginLink:invalid {
+  border: 1px dotted red;
+}
 
-  .wf-modal { 
-    background-color: $primary-bg-color;
-  }
+#getJsonBtn {
+  width: 15%;
+  margin-left: 2.5%;
+  margin-right: 2%;
+  font-size: 16px;
+}
+
+#registerBtn {
+  background-color: #f8f9fa;
+  border-color: #bfbfbf;
+  color: black;
+}
+
+#registerText {
+  margin-left: 10px;
+  display: inline;
+  font-family: 'Roboto', sans-serif;
+  font-weight: normal;
+}
+
+.top5 {
+  margin-top: 5%;
+}
+
+.width80 {
+  width: 80%;
+}
+
+.right10 {
+  margin-right: 10px;
+}
+
+.wf-modal { 
+  background-color: $primary-bg-color;
+}
+
+.modal-title {
+  color: colors.$primary;
+}
