--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,56 +4,56 @@ $header-height: 75px;
 $nav-width: 250px;
 
 .layout {
-  height: 100vh;
-  width: 100vw;
+    height: 100vh;
+    width: 100vw;
 }
 
 main {
-  display: flex;
-  height: calc(100vh - $header-height);
-  background-color: colors.$black;
-  color: colors.$primary;
-  position: static;
+    display: flex;
+    height: calc(100vh - $header-height);
+    background-color: colors.$black;
+    color: colors.$primary;
+    position: static;
 }
 
-main > article {
-  flex: 1;
-  position: relative;
-  overflow: hidden;
+main>article {
+    flex: 1;
+    position: relative;
+    overflow: hidden;
 }
 
 header {
-  background: colors.$darkgray;
-  height: $header-height;
-  border-bottom: 1px solid colors.$black;
-  padding: 0;
-  background-repeat: no-repeat;
-  background-size: cover;
-  display: flex;
-  align-items: center;
+    background: colors.$darkgray;
+    height: $header-height;
+    border-bottom: 1px solid colors.$black;
+    padding: 0;
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    align-items: center;
 
-  .header-menu {
-    margin-left: 20px;
+    .header-menu {
+        margin-left: 20px;
 
-    button {
-      background-color: transparent;
-      border: none;
-      color: colors.$primary;
-      margin-left: 5px;
-      cursor: pointer;
-      font-size: 1rem;
-      text-decoration: underline;
+        button {
+            background-color: transparent;
+            border: none;
+            color: colors.$primary;
+            margin-left: 5px;
+            cursor: pointer;
+            font-size: 1rem;
+            text-decoration: underline;
+        }
     }
-  }
 }
 
-.form-control { 
-    width: 400px; 
+.form-control {
+    width: 400px;
     background-color: colors.$black;
     margin-left: 40px;
 }
 
-.box {
+.top-box {
     display: flex;
     justify-items: center;
 }
@@ -61,6 +61,11 @@ header {
 .last {
     margin-left: auto;
     margin-right: 40px;
+
+    button {
+        margin-left: 10px;
+        // margin-right: 5px;
+    }
 }
 
 .separator {
@@ -73,11 +78,46 @@ header {
 }
 
 .wf-area {
-    border: dashed 2px lightgray ;
-    min-height: 500px;
-    height: 60%;
-    overflow: hidden;
+    flex: auto;
+    border: dashed 2px lightgray;
+    max-height: 800px;
+    min-width: 800px;
+    // height: 60%;
+    overflow: scroll;
     margin-top: 2rem;
+    // margin-left: 40px;
+    // margin-right: 40px;
+    // display: flex;
+    // justify-content: center;
+    // align-items: center;
+    // min-height: 100vh;
+    // flex-direction: column;
+}
+
+.box {
+    display: flex;
+    justify-items: center;
     margin-left: 40px;
     margin-right: 40px;
+}
+
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    width: 100%;
+
+    &.list {
+        grid-template-columns: 1fr;
+    }
+
+    .col {
+        width: calc(100% - 20px);
+        height: 90px;
+        // background: #912F40;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: #FFFFFA;
+        margin: 10px;
+    }
 }
