--- a/src/app/components/right-panel/right-panel.component.html
+++ b/src/app/components/right-panel/right-panel.component.html
@@ -1,6 +1,6 @@
 <div class="right-panel">
   <div class="panel-header">
-    <h3>Selection Details</h3>
+    <h5>Selection Details</h5>
   </div>
   <div *ngFor="let node of state!.nodes" class="accordion">
     <button class="button" [ngClass]="{ selected: selected[node.id!] }" (click)="togglePanel(node)">
@@ -8,15 +8,33 @@
     </button>
     <div [hidden]="!visibleNodesMap.get(node.id!)" class="node-settings">
       <div>
-        <div *ngFor="let input of node.plugin.cwlScript.inputs | keyvalue">
-          <label for="setting">{{input.key}}</label>
-          <input [(ngModel)]="node.settings" type="text" name="" id="setting" />
+        <!-- <div *ngFor="let input of node.plugin.cwlScript.inputs | keyvalue">
+          <label for="setting">{{input.key}}:</label>
+          <input (change)="setSettingsVal(input.key + '', input.value + '', node)" type="text" name="" id="setting" />
+        </div> -->
+        <div *ngFor="let input of node.settings.inputs | keyvalue; let i = index;" [attr.data-index]="i">
+          <label for="setting">{{input.key}}:</label>
+          {{input.value}}
+          <!-- <input [(ngModel)]="input.value" type="text" name="{{'input' + i}}" id="setting"/>  -->
+          <input [(ngModel)]="input.value" (change)="setSettingsVal(input.key + '', $event, node)" type="text" name="{{'input' + i}}" id="setting"/>
         </div>
       </div>
       <br />
     </div>
   </div>
+  <!-- <pre> {{state!.nodes[0].settings| json}}</pre> -->
   <div class="node-settings">
     <button class="btn btn-green" (click)="save()">Save</button>
   </div>
 </div>
+
+<!-- <form #f="ngForm" (ngSubmit)="onSubmit(f)" novalidate>
+  <input name="first" ngModel required #first="ngModel">
+  <input name="last" ngModel>
+  <button>Submit</button>
+</form> 
+    <p>First name value: {{ first.value }}</p>
+    <p>First name valid: {{ first.valid }}</p>
+    <p>Form value: {{ f.value | json }}</p>
+    <p>Form valid: {{ f.valid }}</p>
+-->
