--- a/src/app/components/top-controls/top-controls.component.html
+++ b/src/app/components/top-controls/top-controls.component.html
@@ -10,7 +10,7 @@
   <button class="btn btn-noborder" (click)="play()">
     <i class="icon-lsi-play"></i>
   </button>
-  <button class="btn btn-green run" (click)="runWorkflow()">
+  <button class="btn btn-green run" (click)="runWorkflowX()">
     <b class="icon-lsi-workflow">Run</b>
   </button>
 </div>
