--- a/src/app/components/plugin-a/plugin-a.component.html
+++ b/src/app/components/plugin-a/plugin-a.component.html
@@ -1,12 +1,7 @@
 <!-- <div>Plugin A</div> -->
-<div class="plugin">
+<!-- <div class="plugin">
     <h6>Inputs</h6>
     <div *ngFor="let input of node?.plugin?.cwlScript.inputs | keyvalue">
-        <!-- <div class="inlet"></div> -->
-        <!-- <div class="outlet" [hidden]="!hasOutlet"></div> -->
-        <label class="inlet">{{input.key}}</label>
-        <!-- {{input.value}} -->
-        <!-- <input [(ngModel)]="input.value" type="text" name="{{'input' + i}}" id="setting"/>  -->
-        <!-- <input [(ngModel)]="input.value" (change)="setSettingsVal(input.key + '', $event, node)" type="text" name="" id="setting"/> -->
+        <div class="param-inlet">{{input.key}}</div>
     </div>
-</div>
+</div> -->
