--- a/src/app/components/plugin-a/plugin-a.component.scss
+++ b/src/app/components/plugin-a/plugin-a.component.scss
@@ -9,107 +9,109 @@ $light-color: #d8e2fa;
 $gold-color: #fec966;
 $border-radius: 10px;
 
-.plugin {
-    border: 2px solid $light-color;
-    cursor: grab;
-    position: absolute;
-    background-color: #3e3e3e;
-    z-index: 1;
-    border-radius: $border-radius;
-    color: $light-color;
+// .plugin {
+//     border: 2px solid $light-color;
+//     cursor: grab;
+//     position: absolute;
+//     background-color: #3e3e3e;
+//     z-index: 1;
+//     border-radius: $border-radius;
+//     color: $light-color;
   
-    user-select: none;
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    -webkit-user-select: none;
-    -o-user-select: none;
+//     user-select: none;
+//     -moz-user-select: none;
+//     -khtml-user-select: none;
+//     -webkit-user-select: none;
+//     -o-user-select: none;
   
-    &.selected {
-      border: 2px solid $gold-color;
+//     &.selected {
+//       border: 2px solid $gold-color;
   
-      .inlet,
-      .outlet {
-        background-color: colors.$green;
-        border-color: gold-color;
-      }
+//       .inlet,
+//       .outlet {
+//         background-color: colors.$green;
+//         border-color: gold-color;
+//       }
+//     }
+  
+//     &:active {
+//       cursor: grabbing;
+//     }
+  
+//     .node-header {
+//       width: 100%;
+//       height: $height;
+//       display: flex;
+//       align-items: center;
+  
+//       button {
+//         background-color: transparent;
+//         border: none;
+//         color: $light-color;
+//         margin-left: 5px;
+//         cursor: pointer;
+//       }
+  
+//       .title {
+//         padding-left: 10px;
+//         flex-grow: 1;
+//       }
+  
+//       .icon {
+//         width: 50px;
+//         border-top-right-radius: $border-radius;
+//         border-bottom-right-radius: $border-radius;
+//         background-color: black;
+//         height: 100%;
+//         display: flex;
+//         align-items: center;
+//         justify-content: center;
+//         font-size: 1.25rem;
+//       }
+//     }
+  
+//     .node-content {
+//       border-top: 2px solid $light-color;
+//       width: 100%;
+//       padding: 10px;
+//     }
+  
+//     .outlet {
+//       border: 1px solid $light-color;
+//       width: calc($outlet-size / 2);
+//       height: $outlet-size;
+//       position: absolute;
+//       top: calc(vars.$link-top-offset - $outlet-size / 2);
+//       left: calc(100% + 1px);
+//       border-top-right-radius: $outlet-size;
+//       border-bottom-right-radius: $outlet-size;
+//       background-color: #000;
+//       z-index: 2;
+  
+//       &:hover {
+//         background-color: colors.$green;
+//         cursor: crosshair;
+//       }
+//     }
+  
+    .param-inlet {
+      border-top: 1px solid black;
+      border-bottom: 1px solid black;
+      // border: 1px solid $light-color;
+      // width: calc($outlet-size / 2);
+      // height: $outlet-size;
+      // position: absolute;
+      // top: calc(vars.$link-top-offset - $outlet-size / 2);
+      // left: calc(-1px - $outlet-size / 2);
+      // border-top-left-radius: $outlet-size;
+      // border-bottom-left-radius: $outlet-size;
+      // background-color: #000;
+      // z-index: 2;
+  
+      // &:hover {
+      //   background-color: colors.$green;
+      //   cursor: crosshair;
+      // }
     }
-  
-    &:active {
-      cursor: grabbing;
-    }
-  
-    .node-header {
-      width: 100%;
-      height: $height;
-      display: flex;
-      align-items: center;
-  
-      button {
-        background-color: transparent;
-        border: none;
-        color: $light-color;
-        margin-left: 5px;
-        cursor: pointer;
-      }
-  
-      .title {
-        padding-left: 10px;
-        flex-grow: 1;
-      }
-  
-      .icon {
-        width: 50px;
-        border-top-right-radius: $border-radius;
-        border-bottom-right-radius: $border-radius;
-        background-color: black;
-        height: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 1.25rem;
-      }
-    }
-  
-    .node-content {
-      border-top: 2px solid $light-color;
-      width: 100%;
-      padding: 10px;
-    }
-  
-    .outlet {
-      border: 1px solid $light-color;
-      width: calc($outlet-size / 2);
-      height: $outlet-size;
-      position: absolute;
-      top: calc(vars.$link-top-offset - $outlet-size / 2);
-      left: calc(100% + 1px);
-      border-top-right-radius: $outlet-size;
-      border-bottom-right-radius: $outlet-size;
-      background-color: #000;
-      z-index: 2;
-  
-      &:hover {
-        background-color: colors.$green;
-        cursor: crosshair;
-      }
-    }
-  
-    .inlet {
-      border: 1px solid $light-color;
-      width: calc($outlet-size / 2);
-      height: $outlet-size;
-      position: absolute;
-      top: calc(vars.$link-top-offset - $outlet-size / 2);
-      left: calc(-1px - $outlet-size / 2);
-      border-top-left-radius: $outlet-size;
-      border-bottom-left-radius: $outlet-size;
-      background-color: #000;
-      z-index: 2;
-  
-      &:hover {
-        background-color: colors.$green;
-        cursor: crosshair;
-      }
-    }
-  }
+//   }
   
