--- a/src/app/components/link/link.component.html
+++ b/src/app/components/link/link.component.html
@@ -1,6 +1,6 @@
-<div class="link" #host>
+<div class="link" [attr.link-id]="id" #host>
   <svg>
-    <path
+    <path [ngClass]="{ selected: selected }"
       d="
       M 0,0
       h 100
