--- a/src/app/components/right-panel/right-panel.component.html
+++ b/src/app/components/right-panel/right-panel.component.html
@@ -13,16 +13,39 @@
       {{ node.name }}
     </button>
     <div [hidden]="!visibleNodesMap.get(node.id!)" class="node-settings">
-      <div>
-        <div *ngFor="let input of node.plugin.cwlScript.inputs | keyvalue">
-          <label for="setting">{{input.key}}</label>
-          <input [(ngModel)]="node.settings" type="text" name="" id="setting" />
+      <!-- <div *ngFor="let input of node.plugin.cwlScript.inputs | keyvalue">
+        <label for="setting">{{input.key}}</label>
+        <input [(ngModel)]="node.settings" type="text" name="" id="setting" />
+      </div> -->
+      <div *ngFor="let input of node.settings.inputs | keyvalue; let i = index;" [attr.data-index]="i">
+        <label for="setting">{{input.key}}</label>
+        <div *ngIf="input.key === 'config'">
+          <div [hidden]="!inputOptionalMap.get(node.name + '-' + input.key)">
+            (optional)
+          </div>
+          <textarea #configText (change)="setSettingsVal(input.key + '', $event, node)" [(ngModel)]="input.value"
+                    id="configText" name="{{'input' + i}}"
+                    class="form-control top5" rows="5" placeholder="Copy your JSON file content here">  
+          </textarea>        
         </div>
+        <div *ngIf="input.key !== 'config';">
+          <input [(ngModel)]="input.value" (change)="setSettingsVal(input.key + '', $event, node)" type="text" name="{{'input' + i}}" id="setting"/>
+        </div>
+        <!-- <input [(ngModel)]="input.value" (change)="setSettingsVal(input.key + '', $event, node)" type="text" name="{{'input' + i}}" id="setting"/> -->
       </div>
       <br />
     </div>
   </div>
-  <div class="node-settings">
+  <!-- <div class="node-settings">
     <button class="btn btn-green" (click)="save()">Save</button>
-  </div>
+  </div> -->
 </ng-template>
+
+
+<!-- <ng-template #stringInput let-input='input' let-node='node' let-index='i'> -->
+<!-- <ng-template #stringInput ngFor let-node [ngForOf]="state!.nodes"> -->
+  <!-- hello
+  input : {{input}} -->
+  <!-- YOOOOO : {{node.name}} -->
+  <!-- <input [(ngModel)]="input.value" (change)="setSettingsVal(input.key + '', $event, node)" type="text" name="{{'input' + index}}" id="setting"/> -->
+<!-- </ng-template> -->
